--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -21,9 +21,40 @@ body {
   background-size: cover, cover, cover, cover; */
 }
 
+.white-bg {
+  background: #f5f5f5;
+}
+
+
+/* TOP NAV */
+.explore-top-nav {
+  background: #000000;
+  color: white;
+}
+
+.explore-top-nav a {
+  color: rgb(227, 227, 227);
+  text-decoration: none;
+}
+
+/* EXPLORE CARD */
+.explore-card {
+  max-width: 15rem;
+  border: none;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.explore-card:hover {
+  font-weight: 1000;
+  background-color: #0000001a;
+  transition: 0.1s;
+}
+
+
 /* MISCELLANEOUS */
 .min-h-100 {
-  min-height: 500px;
+  min-height: 100vh;
 }
 
 .pill {
@@ -32,6 +63,10 @@ body {
 
 .display-10 {
   font-size: 1rem
+}
+
+.display-11 {
+  font-size: 0.8rem
 }
 
 .pb-10 {
@@ -46,6 +81,16 @@ body {
   white-space: nowrap !important;
 }
 
+.border-top-black {
+  border-top: 1px solid #000000 !important;
+}
+
 .border-bot {
   border-bottom: 1px solid #dee2e6 !important;
+}
+
+.breadcrumb-item+.breadcrumb-item::before {
+  content: ">";
+  padding: 0 5px;
+  color: #ffffff;
 }
