--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -77,6 +77,28 @@ body {
   color: white;
 }
 
+.text-black {
+  color: black
+}
+
+.border-black {
+  border: 1px solid #000000 !important;
+}
+
+.noDecoration {
+  text-decoration: none !important;
+  color: inherit !important;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+.clickable:hover {
+  background-color: #f5f5f5;
+  transition: 0.2s;
+}
+
 .noWrap {
   white-space: nowrap !important;
 }
